# rfb-assessment

./: .gitignore  ASSESSMENT.md  Cargo.toml  README.md  config.example.toml
src/: cli.rs  config.rs  error.rs  main.rs  rpc.rs
src/commands/: address.rs  blockchain.rs  generic.rs  mod.rs  wallet.rs
